# garagem

./: .pdm-python  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  apps.py
core/migrations/: 0001_initial.py  0002_cor.py  0003_modelo.py  0004_veiculo.py  0005_remove_veiculo_acessorio_veiculo_acessorio.py  0006_alter_veiculo_acessorio_alter_veiculo_cor_and_more.py  0007_alter_veiculo_acessorio_alter_veiculo_cor_and_more.py
core/models/: __init__.py  acessorio.py  cor.py  modelo.py  veiculo.py
core/serializers/: __init__.py  acessorio.py  cor.py  modelo.py  veiculo.py
core/views/: __init__.py  acessorio.py  cor.py  modelo.py  veiculo.py
