[project]
name = "garagem"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "luansilva25", email = "luansilva250807@gmail.com"},
]
dependencies = ["django>=5.2", "djangorestframework>=3.16.0", "django-extensions>=4.1", "pygraphviz>=1.14"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = 'python manage.py runserver'
makemigrations = 'python manage.py makemigrations'
createsuperuser = 'python manage.py createsuperuser'
migrate = 'python manage.py migrate'
image_app = "python manage.py graph_models core --pygraphviz -o garagem.png"
image_prj = "python manage.py graph_models -a --pygraphviz -o garagem.png"